Some error corrections

--- a/exercise2/Makefile
+++ b/exercise2/Makefile
@@ -2,6 +2,7 @@ CC = mpicc
 INCDIR = headers
 SRCDIR = source
 OBJDIR = objects
+DEPS = $(INCDIR)/par_quicksort.h
 
 CFLAGS = -c -I$(INCDIR)
 OFLAGS = -Wall -Wextra -O3 -march=native -fopenmp
@@ -11,8 +12,8 @@ OBJECTS = $(OBJDIR)/par_quicksort.o $(OBJDIR)/main.o
 main: $(OBJECTS)
 	$(CC) $(OFLAGS) $^ -o $@
 
-$(OBJDIR)/%.o: $(SRCDIR)/%.c
-	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
+%.o: %.c $(DEPS)
+	$(CC) $(CFLAGS) $(OFLAGS) $< -o $@
 
 clean:
 	rm -f $(OBJDIR)/*.o main
