--- a/exercise2/Makefile
+++ b/exercise2/Makefile
@@ -4,16 +4,16 @@ SRCDIR = source
 OBJDIR = objects
 DEPS = $(INCDIR)/par_quicksort.h
 
-CFLAGS = -c -I$(INCDIR)
+CFLAGS = -I$(INCDIR)
 OFLAGS = -O3 -march=native -fopenmp
 
-OBJECTS = $(OBJDIR)/par_quicksort.o $(OBJDIR)/main.o
+OBJECTS = $(OBJDIR)/par_quicksort.c $(OBJDIR)/main.c
 
 main: $(OBJECTS)
-	$(CC) $(OFLAGS) $^ -o $@
+	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
 
-$(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
-	$(CC) $(CFLAGS) $(OFLAGS) $< -o $@
+# $(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
+# 	$(CC) $(CFLAGS) $(OFLAGS) $< -o $@
 
 clean:
 	rm -f $(OBJDIR)/*.o main
