--- a/exercise2/Makefile
+++ b/exercise2/Makefile
@@ -7,13 +7,13 @@ DEPS = $(INCDIR)/par_quicksort.h
 CFLAGS = -I$(INCDIR)
 OFLAGS = -O3 -march=native -fopenmp
 
-OBJECTS = $(SRCDIR)/par_quicksort.c $(SRCDIR)/main.c
+OBJECTS = $(SRCDIR)/par_quicksort.o $(SRCDIR)/main.o
 
 main: $(OBJECTS)
 	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
 
-# $(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
-# 	$(CC) $(CFLAGS) $(OFLAGS) $< -o $@
+#$(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
+#	$(CC) $(CFLAGS) $(OFLAGS) $< -o $@
 
 clean:
 	rm -f $(OBJDIR)/*.o main
