--- a/exercise2/Makefile
+++ b/exercise2/Makefile
@@ -7,7 +7,7 @@ DEPS = $(INCDIR)/par_quicksort.h
 CFLAGS = -I$(INCDIR)
 OFLAGS = -O3 -march=native -fopenmp
 
-OBJECTS = $(SRCDIR)/par_quicksort.o $(SRCDIR)/main.o
+OBJECTS = $(SRCDIR)/par_quicksort.c $(SRCDIR)/main.c
 
 main: $(OBJECTS)
 	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
