--- a/exercise2/Makefile
+++ b/exercise2/Makefile
@@ -4,16 +4,16 @@ SRCDIR = source
 OBJDIR = objects
 DEPS = $(INCDIR)/par_quicksort.h
 
-CFLAGS = -I$(INCDIR)
+CFLAGS = -I$(INCDIR) -c -fopenmp
 OFLAGS = -O3 -march=native -fopenmp
 
 OBJECTS = $(OBJDIR)/par_quicksort.o $(OBJDIR)/main.o
 
 main: $(OBJECTS)
-	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
+	$(CC) $(OFLAGS) $^ -o $@
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
-	$(CC) $(CFLAGS) $(OFLAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@
 
 clean:
 	rm -f $(OBJDIR)/*.o main
